# pcode

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  QUALITY.md  README.md  build.rs  demo_interactive.sh  demo_pcode.sh  deno.json  install.sh  test_interactive.sh
.github/workflows/: ci.yml  release.yml
benches/: runtime_performance.rs  token_estimation.rs
docs/: pmat-integration.md  v1-spec.md
examples/: dogfood.rs  generate_tests.rs  interactive_demo.rs  test_api_key.rs
scripts/: demo_interactive.ts  test_all.test.ts  test_chat_responses.ts  test_interactive.ts
src/: chat.rs  config.rs  context.rs  lib.rs  main.rs
src/mcp/: discovery.rs  mod.rs  protocol.rs  protocol_v2.rs  secure_discovery.rs  streaming.rs  transport.rs  transport_tests.rs
src/runtime/: mod.rs
src/security/: linux.rs  macos.rs  manifest.rs  mod.rs  sandbox.rs  verified_sandbox.rs  windows.rs
src/token_estimation/: mod.rs
src/tools/: bash.rs  coverage.rs  dev_cli.rs  file.rs  fix.rs  javascript.rs  llm.rs  mod.rs  pmat.rs  process.rs  python.rs  refactor.rs  stream_exec.rs
tests/: chat_test.rs  config_test.rs  dogfood_coverage_test.rs  error_handling_test.rs  file_tool_test.rs  generated_transport_test.rs  integration_test.rs  mcp_protocol_test.rs  mcp_simple_test.rs  pmat_tool_test.rs  process_tool_test.rs  runtime_test.rs  security_sandbox_test.rs  security_test.rs  token_estimation_test.rs  tools_test.rs  transport_test.rs
